# fmi

./: .gitignore  README.md
Algorithms/daa-pract/: CMakeLists.txt  binary_representation.h  main.cpp
Algorithms/daa-pract/exercise1/: sort.h
Algorithms/daa-pract/sort/: sort.h
Algorithms/problems/: CMakeLists.txt  main.cpp
clean-code/: .gitlab-ci.yml  build.gradle  settings.gradle
clean-code/src/Items/: Food.java  (+2 more)
oop/computer_parts/: CMakeLists.txt  main.cpp  problem_desc.md
oop/computer_parts/array/: array.h
oop/computer_parts/computer_part/: computer_part.cpp  computer_part.h
oop/computer_parts/computer_part_reader/: computer_part_reader.cpp  computer_part_reader.h
oop/computer_parts/computer_part_type/: computer_part_type.cpp  computer_part_type.h
oop/computer_parts/computer_part_writer/: computer_part_writer.cpp  computer_part_writer.h
oop/computer_parts/computer_store/: computer_store.h
oop/computer_parts/string/: string.cpp  string.h
oop/computer_parts/utilities/: utilities.cpp  utilities.h
oop/example_exam1/: CMakeLists.txt  README.md
oop/example_exam1/MonthlyPlanner/: MonthlyPlanner.cpp  MonthlyPlanner.h
oop/example_exam1/PlannedTask/: PlannedTask.cpp  PlannedTask.h
oop/example_exam1/Task/: Task.cpp  Task.h
oop/example_exam2/: CMakeLists.txt  README.md
oop/example_exam2.1/: CMakeLists.txt
oop/example_exam2.1/DynamicArray/: DynamicArray.cpp  DynamicArray.h
oop/example_exam2.1/Mage/: Mage.cpp  Mage.h
oop/example_exam2.1/Player/: Player.cpp  Player.h
oop/example_exam2.1/PlayerCollection/: PlayerCollection.cpp  PlayerCollection.h
oop/example_exam2.1/Position/: Position.h
oop/example_exam2.1/Warrior/: Warrior.cpp  Warrior.h
(+15 files in other folders)
